--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:layout_margin="30dp"
+    android:layout_gravity="center"
     tools:context=".MainActivity">
+
 
     <TextView
         android:id="@+id/myTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="-Assignment 001-"
+        android:text="-Assignments-"
         android:textSize="18sp"
+        android:layout_gravity="center"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -36,6 +42,7 @@
         android:text="Click Me To change color!"
         app:layout_constraintTop_toBottomOf="@id/myImageView"
         app:layout_constraintStart_toStartOf="parent"
+        android:layout_gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="16dp" />
 
@@ -47,10 +54,23 @@
         android:text="IT IS A Clickable TEXT"
         android:textColor="#0000FF"
         android:textSize="22sp"
+        android:layout_gravity="center"
     android:textStyle="bold"
     app:layout_constraintTop_toBottomOf="@id/myButton"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     android:layout_marginTop="16dp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+        android:id="@+id/as2Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Click Here to see Assignment 2"
+        app:layout_constraintTop_toBottomOf="@id/myImageView"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_gravity="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp" />
+
+
+</LinearLayout>
